--- a/style.css
+++ b/style.css
@@ -57,8 +57,10 @@ body {
     width: 250px;
     height: 30px;
     border-radius: 8px;
+    color: #07294b;
     text-align: center;
     font-size: 1em;
+    font-weight: 600;
     background-color: rgba(255, 255, 255, 0.6);
 }
 
@@ -81,11 +83,13 @@ button {
 }
 
 .city {
+    font-size: 2em;
     font-weight: 600;
     color: white;
 }
 
 .temp {
+    font-size: 1.5em;
     font-weight: 300;
     color: white;
 }
@@ -94,20 +98,17 @@ button {
     color: white;
     text-transform: uppercase;
     letter-spacing: 0.2em;
-    font-size: 0.9em;
+    font-size: 1em;
     font-weight: 500;
     line-height: 2em;
 }
 
 .img {
-    margin: 0.6em 0 0 0;
     width: 6.2em;
-    filter: drop-shadow(0 1.8em 3.7em var(--shadow));
 }
 
 .msg {
-    margin-top: 1.8em;
-    color: white;
+    color: rgb(9, 32, 83);
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 0.1em;
